5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4254/executions/1585_1017.log
== TEST (2019-03-22 21:08:50) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
raio = 6371,01
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

distancia = raio * acos * (sin(t1)*sin(t2) + (cos(t1)*cos(t2) * cos(g1-g2))
print(round(distancia,2))
-- ERROR:
File "XXXX", line 5
    raio = 6371,01
                 ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:09:33) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
raio = 6371,01
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

distancia = raio * acos * (sin(t1)*sin(t2) + (cos(t1)*cos(t2) * cos(g1-g2))
print(sin(30)
-- ERROR:
File "XXXX", line 5
    raio = 6371,01
                 ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 21:10:55) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
raio = 6371,01
t1 = radians(float(input("Latitude de t1: ")))
t2 = radians(float(input("Latitude de t2: ")))
g1 = radians(float(input("Latitude de g1: ")))
g2 = radians(float(input("Latitude de g2: ")))

distancia = raio * acos * (sin(t1)*sin(t2) + (cos(t1)*cos(t2) * cos(g1-g2))
print(round(distancia,2))
-- EXECUTION TIME:
0.1341
-- ERROR:
  File "/home/codebench/codes/1585/1017/main.py", line 5
    raio = 6371,01
                 ^
SyntaxError: invalid token

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:13:34) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
raio = 6371,01
t1 = radians(float(input("Latitude de p1: ")))
g1 = radians(float(input("Longitude de p1: ")))
t2 = radians(float(input("Latitude de p2: ")))
g2 = radians(float(input("Longitude de p2: ")))

distancia = t1+t2+g1+g2+pi
print(round(distancia,2))
-- ERROR:
File "XXXX", line 5
    raio = 6371,01
                 ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:13:57) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
raio = 6371,01
t1 = radians(float(input("Latitude de p1: ")))
g1 = radians(float(input("Longitude de p1: ")))
t2 = radians(float(input("Latitude de p2: ")))
g2 = radians(float(input("Longitude de p2: ")))

distancia = t1+t2+g1+g2*pi
print(round(distancia,2))
-- ERROR:
File "XXXX", line 5
    raio = 6371,01
                 ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 21:15:38) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*

raio = 6371,01
t1 = radians(float(input("Latitude de p1: ")))
g1 = radians(float(input("Longitude de p1: ")))
t2 = radians(float(input("Latitude de p2: ")))
g2 = radians(float(input("Longitude de p2: ")))

distancia = raio * acos * (sin(t1)*sin(t2) + (cos(t1)*cos(t2) * cos(g1-g2))
print(raio*pi)
-- EXECUTION TIME:
0.179634
-- ERROR:
  File "/home/codebench/codes/1585/1017/main.py", line 6
    raio = 6371,01
                 ^
SyntaxError: invalid token

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:15:40) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*

raio = 6371,01
t1 = radians(float(input("Latitude de p1: ")))
g1 = radians(float(input("Longitude de p1: ")))
t2 = radians(float(input("Latitude de p2: ")))
g2 = radians(float(input("Longitude de p2: ")))

distancia = raio * acos * (sin(t1)*sin(t2) + (cos(t1)*cos(t2) * cos(g1-g2))
print(raio*pi)
-- ERROR:
File "XXXX", line 6
    raio = 6371,01
                 ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:16:36) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*

raio = 6371.01
t1 = radians(float(input("Latitude de p1: ")))
g1 = radians(float(input("Longitude de p1: ")))
t2 = radians(float(input("Latitude de p2: ")))
g2 = radians(float(input("Longitude de p2: ")))

distancia = raio * acos * (sin(t1)*sin(t2) + (cos(t1)*cos(t2) * cos(g1-g2))
print(raio*pi)
-- ERROR:
File "XXXX", line 13
    print(raio*pi)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:16:46) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*

raio = 6371.01
t1 = radians(float(input("Latitude de p1: ")))
g1 = radians(float(input("Longitude de p1: ")))
t2 = radians(float(input("Latitude de p2: ")))
g2 = radians(float(input("Longitude de p2: ")))

distancia = raio * acos * (sin(t1)*sin(t2) + (cos(t1)*cos(t2) * cos(g1-g2))
print(round(distancia,2))
-- ERROR:
File "XXXX", line 13
    print(round(distancia,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:17:57) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*

raio = 6371.01
t1 = radians(float(input("Latitude de p1: ")))
g1 = radians(float(input("Longitude de p1: ")))
t2 = radians(float(input("Latitude de p2: ")))
g2 = radians(float(input("Longitude de p2: ")))

distancia = raio * acos * (sin(t1)*sin(t2) + (cos(t1)*cos(t2) * cos(g1-g2))
print(round(distancia,2))
-- ERROR:
File "XXXX", line 13
    print(round(distancia,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:18:40) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*

raio = 6371.01
t1 = radians(float(input("Latitude de p1: ")))
g1 = radians(float(input("Longitude de p1: ")))
t2 = radians(float(input("Latitude de p2: ")))
g2 = radians(float(input("Longitude de p2: ")))

distancia = float( raio * acos * (sin(t1)*sin(t2) + (cos(t1)*cos(t2) * cos(g1-g2)))
print(round(distancia,2))
-- ERROR:
File "XXXX", line 13
    print(round(distancia,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:20:22) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*

raio = 6371.01
t1 = radians(float(input("Latitude de p1: ")))
g1 = radians(float(input("Longitude de p1: ")))
t2 = radians(float(input("Latitude de p2: ")))
g2 = radians(float(input("Longitude de p2: ")))

distancia = raio * acos * (sin(t1)*sin(t2) + (cos(t1)*cos(t2) * cos(g1-g2))
print(round(distancia,2))
-- ERROR:
File "XXXX", line 13
    print(round(distancia,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:21:03) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*

raio = 6371.01
t1 = radians(float(input("Latitude de p1: ")))
g1 = radians(float(input("Longitude de p1: ")))
t2 = radians(float(input("Latitude de p2: ")))
g2 = radians(float(input("Longitude de p2: ")))

distancia = raio * acos (sin(t1)*sin(t2) + (cos(t1)*cos(t2) * cos(g1-g2))
print(round(distancia,2))
-- ERROR:
File "XXXX", line 13
    print(round(distancia,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 21:21:49) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*

raio = 6371.01
t1 = radians(float(input("Latitude de p1: ")))
g1 = radians(float(input("Longitude de p1: ")))
t2 = radians(float(input("Latitude de p2: ")))
g2 = radians(float(input("Longitude de p2: ")))

distancia = raio * acos (sin(t1)*sin(t2) + (cos(t1)*cos(t2) * cos(g1-g2))
print(round(distancia,2))
-- EXECUTION TIME:
0.144538
-- ERROR:
  File "/home/codebench/codes/1585/1017/main.py", line 13
    print(round(distancia,2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:21:53) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*

raio = 6371.01
t1 = radians(float(input("Latitude de p1: ")))
g1 = radians(float(input("Longitude de p1: ")))
t2 = radians(float(input("Latitude de p2: ")))
g2 = radians(float(input("Longitude de p2: ")))

distancia = raio * acos (sin(t1)*sin(t2) + (cos(t1)*cos(t2) * cos(g1-g2))
print(round(distancia,2))
-- ERROR:
File "XXXX", line 13
    print(round(distancia,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:28:57) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*

raio = 6371.01
t1 = radians(float(input("Latitude de p1: ")))
g1 = radians(float(input("Longitude de p1: ")))
t2 = radians(float(input("Latitude de p2: ")))
g2 = radians(float(input("Longitude de p2: ")))

distancia = raio * acos (sin(t1)*sin(t2) + (cos(t1)*cos(t2) * cos(g1-g2))
print(round(distancia,2))
-- ERROR:
File "XXXX", line 13
    print(round(distancia,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:30:50) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*

raio = 6371.01
t1 = radians(float(input("Latitude de p1: ")))
g1 = radians(float(input("Longitude de p1: ")))
t2 = radians(float(input("Latitude de p2: ")))
g2 = radians(float(input("Longitude de p2: ")))

distancia = raio * acos (sin(t1)*sin(t2) + cos(t1)*cos(t2) * cos(g1-g2))
print(round(distancia,2))
-- OUTPUT:
50.44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 21:31:10) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*

raio = 6371.01
t1 = radians(float(input("Latitude de p1: ")))
g1 = radians(float(input("Longitude de p1: ")))
t2 = radians(float(input("Latitude de p2: ")))
g2 = radians(float(input("Longitude de p2: ")))

distancia = raio * acos (sin(t1)*sin(t2) + cos(t1)*cos(t2) * cos(g1-g2))
print(round(distancia,2))
-- EXECUTION TIME:
0.17909
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
